GNOME Bugzilla – Bug 643294
gnome-session shell end session dialog cancel button doesn't always cancel
Last modified: 2011-02-25 15:10:37 UTC
mccann noticed yesterday that if you have an open gedit with unsaved work and click cancel, then after canceling we pop up a new dialog. This is probably a side effect of one of my recent clean ups of the gsm-shell code.
The following fix has been pushed: bd55783 shell: fix cancel button in logout dialog
Created attachment 181919 [details] [review] shell: fix cancel button in logout dialog We were queuing an update from inhibitor changes that could fire after the dialog was canceled, which would cause it to reopen. This commit makes sure the dialog is still open before processing any queued inhibitor updates.