shell: fix cancel button in logout dialog

We were queuing an update from inhibitor changes that could
fire after the dialog was canceled, which would cause it to
reopen.

This commit makes sure the dialog is still open before processing
any queued inhibitor updates.

https://bugzilla.gnome.org/show_bug.cgi?id=643294